data/derived/sp14/progs/unify/prog0166.ml.out
Characters 13-23:
  List.combine ([1], [2]);;
               ^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
